fix errors with additional info

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -38,7 +38,7 @@ layout: default
             <li>{{ course }}</li>
             {% endfor %}
         </ul>
-        <p class="ap-education-additional">{{ education.additional_info | join: '; ' }}</p>
+        <p class="ap-education-additional">{{ education.additional_info }}</p>
     </div>
     {% endfor %}
 </div>
