--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -569,3 +569,8 @@ a:hover {
         margin-top: 32px;
     }
 }
+
+.hollow-bullet-points li {
+    list-style-type: circle;
+    padding-left: 20px;
+}
