--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -19,14 +19,19 @@ layout: default
                 {% assign excerpt_lines = experience.excerpt | newline_to_br | split: '<br />' %}
                 {% assign is_list_started = false %}
                 {% for line in excerpt_lines %}
+                    {% assign trimmed_line = line | strip %}
                     {% if forloop.first %}
-                        <p>{{ line | strip }}</p>
-                    {% elsif line != '' %}
+                        <p>{{ trimmed_line }}</p>
+                    {% elsif trimmed_line != '' %}
                         {% unless is_list_started %}
                             <ul class="hollow-bullet-points">
                             {% assign is_list_started = true %}
                         {% endunless %}
-                        <li>{{ line | remove: '-' | strip }}</li>
+                        {% if trimmed_line contains '[Interkarsolar website]' %}
+                            <li>{{ trimmed_line | replace: '[Interkarsolar website]', 'Interkarsolar website' | replace: '(', '<a href="' | replace: ')', '">' | replace: ']', '</a>' }}</li>
+                        {% else %}
+                            <li>{{ trimmed_line | remove: '-' }}</li>
+                        {% endif %}
                     {% endif %}
                 {% endfor %}
                 {% if is_list_started %}
@@ -38,6 +43,7 @@ layout: default
     {% endfor %}
 </div>
 {% endif %}
+
 
 {% if site.collection_option['education']['visibility'] == true %}
 <div class="ap-line"></div>
