--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -57,7 +57,7 @@ layout: default
             <p class="ap-education-highlight">{{ education.highlight }}</p>
         {% endif %}
         {% if education.courses %}
-            <p class="ap-education-courses">Courses:</p>
+            <p class="ap-education-courses">Related Courses:</p>
             <ul class="hollow-bullet-points">
                 {% for course in education.courses %}
                 <li>{{ course }}</li>
