--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -3,25 +3,7 @@ layout: default
 ---
 <!-- BLOG -->
 <div class="ap-block">
-    {% for post in paginator.posts %}
     <div class="ap-blog-post">
-        <a class="ap-blog-title" href="{{ post.url }}">{{ post.title}}</a>
-        <p class="ap-blog-timestamp">{{ post.date | date: "%b %-d, %Y" }}</p>
-        <p class="ap-blog-excerpt">{{post.excerpt}}</p>
+        <embed src="{{ site.baseurl }}/assets/Shahabinejad_CV.pdf" width="600" height="700" type='application/pdf'>
     </div>
-    {% endfor %}
-</div>
-<!-- PAGINATION -->
-<div class="ap-pagination">
-    <ul>
-        {% for page in (1..paginator.total_pages) %}
-        {% if page == paginator.page %}
-        <li><em>{{ page }}</em></li>
-        {% elsif page == 1 %}
-        <li><a href="/blog">{{ page }}</a></li>
-        {% else %}
-        <li><a href="{{ site.paginate_path | relative_url | replace: ':num', page }}">{{ page }}</a></li>
-        {% endif %}
-        {% endfor %}
-    </ul>
 </div>
