--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -232,7 +232,7 @@ a:hover {
     font-family: "DM Sans", sans-serif;
     font-size: 14px;
     font-weight: 400;
-    color: #575198;
+    color: #7068c3;
     margin: 6px 0px;
 }
 
@@ -592,5 +592,5 @@ a:hover {
 
 .hollow-bullet-points li {
     margin-left: 10px;
-    margin-bottom: 5px;
+    margin-bottom: 2px;
 }
