fix error with demo button

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -89,9 +89,7 @@ layout: default
             {% endfor %}
         </p>
         {% if project.demo %}
-        <p class="ap-demo-tags">
-            <p class="ap-demo-chip">{{ project.demo }}</p>
-        </p>
+        <p class="ap-demo-tags">{{project.demo}}</p>
         {% endif %}
     </div>
     {% endfor %}
