--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -335,6 +335,12 @@ a:hover {
     font-size: 16px;
 }
 
+.ap-certification img {
+    max-width: 400;
+    height: auto;
+    border: 1px solid #ccc;
+}
+
 .ap-achievement {
     margin: 16px 0px;
 }
