--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -262,7 +262,8 @@ a:hover {
 }
 
 .ap-demo-tags .ap-demo-chip:hover {
-    background-color: #635cae; /* Darken the background on hover */
+    background-color: #7068c3;
+    border: 1px solid #7068c3;
 }
 
 .ap-publication {
